--- a/data-engineer-airflow-challenge/config/airflow.cfg
+++ b/data-engineer-airflow-challenge/config/airflow.cfg
@@ -18,7 +18,7 @@ remote_log_conn_id =
 encrypt_s3_logs = False
 
 # Logging level
-logging_level = INFO
+logging_level = WARN
 
 # Logging class
 # Specify the class that will specify the logging configuration
